--- a/Neon.Web/appsettings.json
+++ b/Neon.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "User Id=postgre;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Initial Schema=public;Unicode=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
