--- a/Neon.Data/Neon.Data.csproj
+++ b/Neon.Data/Neon.Data.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Neon.Application\Neon.Application.csproj" />
+  </ItemGroup>
+
 </Project>
