--- a/Neon.Web/Neon.Web.csproj
+++ b/Neon.Web/Neon.Web.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Neon.Application\Neon.Application.csproj" />
+    <ProjectReference Include="..\Neon.Infrastructure\Neon.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
