User form and db config

--- a/Neon.Web/Neon.Web.csproj
+++ b/Neon.Web/Neon.Web.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.5" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+    <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.6" />
+    <PackageReference Include="WebMarkupMin.AspNetCore8" Version="2.16.0" />
   </ItemGroup>
 
   <ItemGroup>
