--- a/Neon.Web/appsettings.json
+++ b/Neon.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "User Id=postgre;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Initial Schema=public;Unicode=true"
+    "Default": "User Id=postgres;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Search Path=public;",
+    "Identity": "User Id=postgres;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Search Path=identity;"
   },
   "Logging": {
     "LogLevel": {
