--- a/Neon.Web/appsettings.json
+++ b/Neon.Web/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "User Id=postgres;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Search Path=public;",
-    "Identity": "User Id=postgres;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Search Path=identity;"
+    "Default": "User Id=postgres;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Search Path=public;"
   },
   "Logging": {
     "LogLevel": {
