--- a/Neon.Application/Neon.Application.csproj
+++ b/Neon.Application/Neon.Application.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\Neon.Domain\Neon.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Identity">
+      <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.5\Microsoft.AspNetCore.Identity.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
