--- a/Neon.Data/Neon.Data.csproj
+++ b/Neon.Data/Neon.Data.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Neon.Application\Neon.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
