--- a/Neon.Web/appsettings.json
+++ b/Neon.Web/appsettings.json
@@ -1,13 +1,15 @@
 {
-  "ConnectionStrings": {
-    "Default": "User Id=postgres;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Search Path=public;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "UpdateLastActiveAtDeltaSeconds": "10"
+	"ConnectionStrings": {
+		"Default": "User Id=postgres;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Search Path=public;"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"LastActiveAtUpserter": {
+		"DeltaSeconds": "10"
+	}
 }
