--- a/Neon.Infrastructure/Neon.Infrastructure.csproj
+++ b/Neon.Infrastructure/Neon.Infrastructure.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Neon.Application\Neon.Application.csproj" />
     <ProjectReference Include="..\Neon.Data\Neon.Data.csproj" />
   </ItemGroup>
