--- a/Neon.Web/package.json
+++ b/Neon.Web/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
+    "@types/jquery": "^3.5.30",
     "@types/node": "^20.14.6"
   }
 }
