--- a/Neon.Web/package.json
+++ b/Neon.Web/package.json
@@ -16,13 +16,14 @@
     "html-webpack-plugin": "5.6.0",
     "mini-css-extract-plugin": "2.9.0",
     "ts-loader": "9.5.1",
-    "typescript": "5.5.2",
+    "typescript": "5.5.3",
     "webpack": "5.92.1",
     "webpack-cli": "5.1.4"
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
     "@types/jquery": "^3.5.30",
-    "@types/node": "^20.14.6"
+    "@types/node": "^20.14.6",
+    "jquery": "^3.7.1"
   }
 }
