--- a/Neon.Application/Neon.Application.csproj
+++ b/Neon.Application/Neon.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Neon.Domain\Neon.Domain.csproj" />
   </ItemGroup>
 
