--- a/Neon.Web/appsettings.json
+++ b/Neon.Web/appsettings.json
@@ -2,11 +2,21 @@
 	"ConnectionStrings": {
 		"Default": "User Id=postgres;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Search Path=public;"
 	},
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft.AspNetCore": "Warning"
-		}
+	"Serilog": {
+		"Using": [ "Serilog.Sinks.File" ],
+		"MinimumLevel": {
+			"Default": "Information"
+		},
+		"WriteTo": [
+			{
+				"Name": "File",
+				"Args": {
+					"path": "Logs/log-.log",
+					"rollingInterval": "Day",
+					"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+				}
+			}
+		]
 	},
 	"AllowedHosts": "*",
 	"LastActiveAtUpserter": {
