Lobby user requests frontend wip

--- a/Neon.Web/appsettings.json
+++ b/Neon.Web/appsettings.json
@@ -3,17 +3,20 @@
 		"Default": "User Id=postgres;Password=pgsql;Host=127.0.0.1;Database=neon;Port=5432;Persist Security Info=true;Search Path=public;"
 	},
 	"Serilog": {
-		"Using": [ "Serilog.Sinks.File" ],
+		"Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
 		"MinimumLevel": {
 			"Default": "Information"
 		},
 		"WriteTo": [
 			{
+				"Name": "Console"
+			},
+			{
 				"Name": "File",
 				"Args": {
 					"path": "Logs/log-.log",
 					"rollingInterval": "Day",
-					"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+					"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
 				}
 			}
 		]
