--- a/Neon.Web/Neon.Web.csproj
+++ b/Neon.Web/Neon.Web.csproj
@@ -11,6 +11,12 @@
   </Target>
 
   <ItemGroup>
+    <Content Remove="wwwroot\html\svg\request-type\duel.html" />
+    <Content Remove="wwwroot\html\svg\request-type\friend.html" />
+    <Content Remove="wwwroot\html\svg\request-type\trade.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <TypeScriptCompile Remove="wwwroot\ts\modules\resources\lobby-resource.ts" />
   </ItemGroup>
 
@@ -48,7 +54,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Logs\" />
     <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Lobby\Svg\RequestType\Duel.cshtml" />
+    <None Include="Views\Lobby\Svg\RequestType\Friend.cshtml" />
+    <None Include="Views\Lobby\Svg\RequestType\Trade.cshtml" />
+    <None Include="wwwroot\html\svg\request-type\duel.html" />
+    <None Include="wwwroot\html\svg\request-type\friend.html" />
+    <None Include="wwwroot\html\svg\request-type\trade.html" />
   </ItemGroup>
 
 </Project>
