--- a/Neon.Web/package.json
+++ b/Neon.Web/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "7.1.2",
-    "html-webpack-plugin": "5.6.0",
+    "eslint": "^9.11.0",
     "mini-css-extract-plugin": "2.9.0",
     "ts-loader": "9.5.1",
     "typescript": "5.5.3",
@@ -23,8 +23,9 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
     "@types/jquery": "^3.5.30",
-    "@types/node": "^20.14.6",
+    "html-loader": "^5.1.0",
     "jquery": "^3.7.1",
-    "raw-loader": "^4.0.2"
+    "raw-loader": "^4.0.2",
+    "solid-js": "^1.8.22"
   }
 }
