--- a/Neon.Web/Neon.Web.csproj
+++ b/Neon.Web/Neon.Web.csproj
@@ -6,35 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <Target Name="RunWebpack" AfterTargets="Build">
-    <Exec Command="npm run build" />
-  </Target>
-
-  <ItemGroup>
-    <Content Remove="wwwroot\svg\request-type\duel.svg" />
-    <Content Remove="wwwroot\svg\request-type\friend.svg" />
-    <Content Remove="wwwroot\svg\request-type\trade.svg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <TypeScriptCompile Remove="wwwroot\tsx\lobby\ActiveUserRow.tsx" />
-    <TypeScriptCompile Remove="wwwroot\tsx\lobby\UserMessage.tsx" />
-    <TypeScriptCompile Remove="wwwroot\ts\modules\resources\lobby-resource.ts" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="wwwroot\tsx\lobby\ActiveUserRow.tsx" />
-    <Content Include="wwwroot\tsx\lobby\UserMessage.tsx" />
-    <Content Include="wwwroot\ts\modules\resources\lobby-resource.ts" />
-  </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.8" />
-    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.5.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="WebMarkupMin.AspNetCore8" Version="2.17.0" />
   </ItemGroup>
 
@@ -59,15 +33,7 @@
 
   <ItemGroup>
     <Folder Include="Logs\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Views\Lobby\Svg\RequestType\Duel.cshtml" />
-    <None Include="Views\Lobby\Svg\RequestType\Friend.cshtml" />
-    <None Include="Views\Lobby\Svg\RequestType\Trade.cshtml" />
-    <None Include="wwwroot\svg\request-type\duel.svg" />
-    <None Include="wwwroot\svg\request-type\friend.svg" />
-    <None Include="wwwroot\svg\request-type\trade.svg" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
