--- a/Neon.Web/package.json
+++ b/Neon.Web/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "description": "",
-  "main": "index.js",
   "scripts": {
     "build": "webpack"
   },
@@ -11,21 +10,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "clean-webpack-plugin": "4.0.0",
-    "css-loader": "7.1.2",
-    "eslint": "^9.11.0",
-    "mini-css-extract-plugin": "2.9.0",
-    "ts-loader": "9.5.1",
-    "typescript": "5.5.3",
-    "webpack": "5.92.1",
-    "webpack-cli": "5.1.4"
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/jquery": "^3.5.31",
+    "babel-loader": "^9.2.1",
+    "babel-preset-solid": "^1.9.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "eslint": "^9.11.1",
+    "html-loader": "^5.1.0",
+    "raw-loader": "^4.0.2",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.2",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@microsoft/signalr": "^8.0.0",
-    "@types/jquery": "^3.5.30",
-    "html-loader": "^5.1.0",
+    "@microsoft/signalr": "^8.0.7",
     "jquery": "^3.7.1",
-    "raw-loader": "^4.0.2",
-    "solid-js": "^1.8.22"
+    "solid-js": "^1.9.1"
   }
 }
